# repo-lcx39tnv

./: .gitignore  LICENSE  README.md  pyproject.toml  railway.json
.github/workflows/: tests.yml
bot/: .env.example  README.md  api.py  main.py  requirements.txt  storage.py
src/: calculator.py  converter.py  data_structures.py  string_utils.py  validator.py
tests/: test_calculator.py  test_converter.py  test_data_structures.py  test_string_utils.py  test_validator.py
